--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,10 @@ input{
     border: 1px solid #00237F;
     border-radius:.2em;
     box-shadow: 1px 1px 1px #00D7E9;
-
+   
+}
+input:hover{
+    background-color:#F1F6F6 ;
 }
 
 #btn__submit{
@@ -61,9 +64,24 @@ input{
     background-color:#0086FF ;
     transform: translateY(3px);
 }
-.update__information{
-    background-color: #AD3A82;
-    width:40vw;
+.posts__list{
+    background-color:#C7EAFF;
+    margin: 2em;
+    border-radius: 1em;
+    width:70vw;
     height: 30vh;
+
+}
+.up__date{
+    background-color:#ffdbc7;
+    margin: 2em;
+    border-radius: 1em;
+    width:70vw;
+    height: 30vh;
+
+}
+
+h2{
+    padding: .5em;
 
 }
