--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ input:hover{
     background-color:#F1F6F6 ;
 }
 
-#btn__submit{
+#submit{
     border: 0;
     padding:.5em;
     border-radius: .2em;
