--- a/styles/style.css
+++ b/styles/style.css
@@ -44,24 +44,27 @@ form{
     padding:1em ;
     border-radius: .5em;
     box-shadow: 3px 3px 3px #AD3A82 ;
+    overflow-y: scroll;
 
 }
+
 fieldset{
+   
     padding: .2em;
+    
 }
 
 label{
     display: block;
     font-family: sans-serif;
-    font-size: 1em;
+    font-size: .8em;
     text-transform: uppercase;
     padding: .5em 0 .5em;
 }
 input{
     display: block;
     width: 100%;
-    padding: .3em;
-    font-size: 18px;
+    font-size: 16px;
     border: 1px solid #00237F;
     border-radius:.2em;
     box-shadow: 1px 1px 1px #00D7E9;
