--- a/styles/style.css
+++ b/styles/style.css
@@ -75,12 +75,14 @@ input:hover{
 }
 
 .btn{
+    margin: 2em;
+    margin-left:15em;
     border: 0;
     padding:.5em;
     border-radius: .2em;
     background-color:#0056D8 ;
     color: white;
-    margin:1.5em auto;
+    /* margin:1.5em auto; */
     width: auto;
     text-transform: uppercase;
     cursor: pointer;
